complete auth contoller
