# server/src/routes/auth.routes.js
@@ -7,6 +7,7 @@ import {
   forgotPassword,
   resetPassword,
   updatePassword,
+  updateProfile,
 } from '../controllers/authController.js';
 import { isAuthenticated } from '../middlewares/authMiddleware.js';
 
@@ -19,5 +20,6 @@ router.get('/logout', isAuthenticated, logout);
 router.post('/password/forgot', forgotPassword);
 router.put('/password/reset/:token', resetPassword);
 router.put('/password/update', isAuthenticated, updatePassword);
+router.put('/profile/update', isAuthenticated, updateProfile);
 
 export default router;
